# TermAl

./: .gitignore  CLAUDE.md  Cargo.toml  Ctmpround63_rust_main.diff  Ctmpround63_rust_tests.diff  Ctmpround63_unstaged_ui.diff  DOLT_REMOTE.md  README.md  SKILL.md  flow.md  manifest  package-lock.json  roadmap.md
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json
.claude/commands/: fix-bug.md  review-changes.md  review-code.md  review-local.md  review-with-delegate.md
.claude/reviewers/: api.md  architecture.md  react-typescript.md  rust.md  security.md  testing.md
docs/: app-split-plan.md  architecture.md  bugs.md  bugs_flicker.md  claude-pair-spec.md  dev-team-pattern.md  diff-card-demo.md  math-demo.md  mermaid-demo.md  metadata-first-baseline.json  metadata-first-phase0-inventory.md  metadata-first-state-plan.md  prompt-responsiveness-refactor-plan.md  roadmap.md  rust-type-safety-plan.md  test.md  themes.md  vision.md
docs/features/: README.md  agent-delegation-sessions.md  agent-integration-comparison.md  agent-mailboxes.md  agent-slash-commands.md  code-navigation-mcp.md  concurrent-session-link-cards.md  orchestration.md  (+24 more)
scripts/: test-rust.sh
src/: acp.rs  agent_readiness.rs  api.rs  api_files.rs  api_git.rs  api_review.rs  api_sse.rs  app_boot.rs  claude.rs  claude_args.rs  claude_spares.rs  claude_spawn.rs  codex.rs  codex_app_requests.rs  codex_bin.rs  codex_discovery.rs  codex_events.rs  codex_home.rs  codex_notices.rs  codex_rpc.rs  codex_submissions.rs  codex_text_stream.rs  codex_thread_actions.rs  codex_turn_cleanup.rs  codex_validation.rs  delegation_mcp.rs  delegations.rs  gemini.rs  git.rs  ids.rs  instructions.rs  mailboxes.rs  main.rs  messages.rs  orchestrator_lifecycle.rs  orchestrator_transitions.rs  orchestrators.rs  paths.rs  persist.rs  persisted_state.rs  (+48 more)
ui/: index.html  package-lock.json  package.json  vite.config.ts
website/: README.md  index.html  script.js  styles.css  verify.mjs
(+485 files in other folders)
