[package]
name = "termal"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
anyhow = "1.0"
axum = "0.8.4"
base64 = "0.22"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
futures-core = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_child = "1.1.1"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
